Fixed the overlaping navbar and sidebar
Added a 50px margin to the top in order to get the elements to not overlap with each other

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -8224,6 +8224,7 @@ textarea#filecont {
   padding: 10px;
   transition: right .3s ease-in-out;
   user-select: none;
+  margin-top: 50px;
 }
 
 #accountRequests-pane-button {
